--- a/WebSite/Web/packages.config
+++ b/WebSite/Web/packages.config
@@ -30,5 +30,8 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="Swashbuckle" version="5.2.2" targetFramework="net46" />
+  <package id="Swashbuckle.Core" version="5.2.2" targetFramework="net46" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
