--- a/WebSite/Web/Web.config
+++ b/WebSite/Web/Web.config
@@ -16,8 +16,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<add key="emailService:Account" value="dajlapu.by@gmail.com" />
-		<add key="emailService:Password" value="x6RxP0l4lI" />
+		<add key="owin:AutomaticAppStartup" value="false" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
