Исправления в стилях на доске объявлений, немного накидал страницу найден

--- a/WebSite/Web/compilerconfig.json
+++ b/WebSite/Web/compilerconfig.json
@@ -18,5 +18,9 @@
   {
     "outputFile": "Styles/animal-add.css",
     "inputFile": "Styles/animal-add.less"
-  }
+  },
+  {
+    "outputFile": "Styles/shared/fonts.css",
+    "inputFile": "Styles/shared/fonts.less"
+  },
 ]
