--- a/WebSite/Web/packages.config
+++ b/WebSite/Web/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.3.6" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net46" />
   <package id="jQuery" version="2.2.0" targetFramework="net46" />
+  <package id="knockoutjs" version="3.4.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net46" />
@@ -29,6 +30,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Modernizr" version="2.8.3" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
+  <package id="normalize.css" version="3.0.2" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Swashbuckle" version="5.2.2" targetFramework="net46" />
   <package id="Swashbuckle.Core" version="5.2.2" targetFramework="net46" />
