--- a/WebSite/Api/packages.config
+++ b/WebSite/Api/packages.config
@@ -35,5 +35,8 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="Swashbuckle" version="5.2.2" targetFramework="net46" />
+  <package id="Swashbuckle.Core" version="5.2.2" targetFramework="net46" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
