--- a/WebSite/Contracts/Contracts.csproj
+++ b/WebSite/Contracts/Contracts.csproj
@@ -70,6 +70,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\AnimalStatuses.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requests\AccountBindingModels.cs" />
     <Compile Include="Responses\AccountViewModels.cs" />
