1) cтраница добавления рабочая, данные отправляются в контроллер в виде RequestModel 2) Enums шарятся с джаваскриптом через T4 генерацию + добавил новых 3) настроил IntelliSense _references.js для javascript + файл conventions для Web
в планах:
1) календарь, дропдауны, поиск сделать (возможно через ko.component)
2) немножко подпилить внешний вид страницы добавления
3) отрефакторить add-list.js

потом когда-нибудь:
1) разобраться с загрузкой файлов (нужно обсудить блобы)

--- a/WebSite/Contracts/Contracts.csproj
+++ b/WebSite/Contracts/Contracts.csproj
@@ -70,7 +70,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums\AnimalStatuses.cs" />
+    <Compile Include="Enums\AdvertTypes.cs" />
+    <Compile Include="Enums\AnimalStatusTypes.cs" />
+    <Compile Include="Enums\AnimalTypes.cs" />
+    <Compile Include="Enums\SexTypes.cs" />
+    <Compile Include="Enums\SizeTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requests\AccountBindingModels.cs" />
     <Compile Include="Responses\AccountViewModels.cs" />
