--- a/WebSite/Web/Web.csproj
+++ b/WebSite/Web/Web.csproj
@@ -267,6 +267,8 @@
     <Content Include="Content\svg-icons\size-small-dog-white.svg" />
     <Content Include="conventions.txt" />
     <Content Include="Scripts\animal-list.js" />
+    <Content Include="Scripts\lib\jquery.datetimepicker.min.js" />
+    <Content Include="Scripts\lib\jquery.datetimepicker.js" />
     <Content Include="Scripts\shared\controls.js" />
     <Content Include="Scripts\shared\enums.js">
       <AutoGen>True</AutoGen>
@@ -279,6 +281,7 @@
     </Content>
     <Content Include="Scripts\shared\_layout.js" />
     <None Include="Scripts\_references.js" />
+    <Content Include="Styles\lib\jquery.datetimepicker.css" />
     <Content Include="Styles\lib\normalize.css" />
     <Content Include="Content\samples\dog-1.png" />
     <Content Include="Content\samples\dog-11.png" />
@@ -303,8 +306,8 @@
     <Content Include="Content\samples\dog-9.png" />
     <Content Include="Scripts\animal-add.js" />
     <Content Include="Scripts\home.js" />
-    <Content Include="Scripts\lib\knockout-3.4.0.debug.js" />
     <Content Include="Scripts\lib\knockout-3.4.0.js" />
+    <Content Include="Scripts\lib\knockout-3.4.0.min.js" />
     <Content Include="Styles\animal-add.css">
       <DependentUpon>animal-add.less</DependentUpon>
     </Content>
